--- a/public/css/play.css
+++ b/public/css/play.css
@@ -1,41 +1,41 @@
 #game {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 #game #game-header {
-    height: var(--header-height);
-    background: rgba(var(--primary-color-rgb), 0.5);
-    color: var(--white-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+  height: var(--header-height);
+  background: rgba(var(--primary-color-rgb), 0.5);
+  color: var(--white-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
 #game #game-header #title {
-    color: var(--white-color);
-    font-size: 35px;
-    font-weight: bold;
-    font-family: "Oxanium", sans-serif;
+  color: var(--white-color);
+  font-size: 35px;
+  font-weight: 800;
+  font-family: "Oxanium", sans-serif;
 }
 
 #game #content {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #game #content #cont {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: var(--white-color);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
 }
 
 #game #content #cont h3 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
